--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     root /var/www/html/public;
     index index.php;
+    client_max_body_size 64m;
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
